--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,18 @@
         "bensampo/laravel-enum": "^3.4",
         "buihuycuong/vnfaker": "dev-master",
         "doctrine/dbal": "^3.1",
+        "fideloper/proxy": "^4.4",
         "flugger/laravel-responder": "^3.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.65",
+        "illuminate/auth": "^8.78",
+        "kreait/laravel-firebase": "^3.1",
+        "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.1",
+        "lcobucci/jwt": "3.4.1",
         "socialiteproviders/line": "^4.1",
         "spatie/laravel-permission": "^5.3",
         "tymon/jwt-auth": "^1.0"
@@ -64,7 +69,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
