--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
         "lcobucci/jwt": "3.4.1",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "socialiteproviders/line": "^4.1",
         "spatie/laravel-permission": "^5.3",
         "tymon/jwt-auth": "^1.0"
