--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "illuminate/auth": "^8.78",
         "kreait/laravel-firebase": "^3.1",
+        "kutia-software-company/larafirebase": "^1.3",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
